Wacom tablet Touch ring actions are listed as "None" unless both directions are set
Affected version
- Arch Linux
- GNOME 40.2.0
- gnome-shell-1:40.3-1
- Verified under Xorg, Wayland untested
Originally reported at https://bugzilla.gnome.org/show_bug.cgi?id=785361 as affecting gnome-shell 3.24.4 under both Xorg and Wayland
Bug summary
The gnome-control-center's Wacom panel provides the ability to configure the touch rings found on some tablets. When you touch the ring, the mapping overlay automatically displays a dropdown allowing you to choose the action to be associated with first one direction (clockwise) and then the other (counter-clockwise).
If one of the two directions is left as "Application Defined", the labels for both actions will report "None" once configuration is done. The actions are properly stored and GNOME will perform the correct action, but the labeling is incorrect.
Steps to reproduce
- Connect a Wacom tablet with a touchring
- Use the GNOME Control Center to map one of the two touchring directions to keypress 'a'
- Leave the other touchring direction set as "Application Defined"
- Observer that the UI indicates both actions are "None"
- Open a text editor
- Verify that the touchring actually sends the 'a' key when moving the finger appropriately
- Verify that the touchring does nothing when moved the opposite direction
What happened
The UI indicates that both touchring directions have an action of "None", despite one action being programmed.
What did you expect to happen
The UI should reflect the one programmed action. Alternatively, if the UI is to disallow setting only one of the two directions then the one programmed action must be cleared (so that "None / None" reflects the actual state of the device) and the user warned of the problem.